# goit-ds-hw-03

./: .env.template  pyproject.toml
mongo/: main.py
scraping/: main.py
